* luci/themes/openwrt.org: 	- remove duplicate contents in js files 	- implement workaround for IE6 overlapping select box issue

--- a/themes/openwrt.org/htdocs/luci-static/openwrt.org/ie6.css
+++ b/themes/openwrt.org/htdocs/luci-static/openwrt.org/ie6.css
@@ -69,3 +69,8 @@
 * html div.cbi-value-field select {
 	font-size: 90% !important;
 }
+
+ul.dropdowns,
+ul.dropdowns ul {
+	z-index: 1000;
+}
